--- a/pom.xml
+++ b/pom.xml
@@ -5,9 +5,16 @@
   <artifactId>io-yes-no</artifactId>
   <packaging>war</packaging>
   <version>1.0-SNAPSHOT</version>
-  <name>io-yes-no Maven Webapp</name>
+    <name>io-yes-no Maven Webapp</name>
   <url>http://maven.apache.org</url>
   <dependencies>
+
+      <dependency>
+          <groupId>com.good.test</groupId>
+          <artifactId>io-yes-common</artifactId>
+          <version>1.0-SNAPSHOT</version>
+      </dependency>
+
     <dependency>
       <groupId>junit</groupId>
       <artifactId>junit</artifactId>
@@ -52,10 +59,58 @@
           <version>4.2.4.RELEASE</version>
       </dependency>
 
+      <dependency>
+          <groupId>org.springframework</groupId>
+          <artifactId>spring-jdbc</artifactId>
+          <version>4.2.4.RELEASE</version>
+      </dependency>
+
+      <dependency>
+          <groupId>com.alibaba</groupId>
+          <artifactId>druid</artifactId>
+          <version>1.0.16</version>
+      </dependency>
+
+      <dependency>
+          <groupId>org.mybatis</groupId>
+          <artifactId>mybatis</artifactId>
+          <version>3.3.0</version>
+      </dependency>
+
+      <dependency>
+          <groupId>org.mybatis</groupId>
+          <artifactId>mybatis-spring</artifactId>
+          <version>1.2.3</version>
+      </dependency>
+
+      <dependency>
+          <groupId>mysql</groupId>
+          <artifactId>mysql-connector-java</artifactId>
+          <version>5.1.38</version>
+      </dependency>
+
+
+
   </dependencies>
 
 
   <build>
     <finalName>io-yes-no</finalName>
+      <plugins>
+      <plugin>
+          <groupId>org.apache.tomcat.maven</groupId>
+          <artifactId>tomcat7-maven-plugin</artifactId>
+          <version>2.1</version>
+          <configuration>
+              <port>9090</port>
+              <path>/${project.build.finalName}</path>
+              <uriEncoding>UTF-8</uriEncoding>
+              <finalName>${project.build.finalName}</finalName>
+              <server>tomcat7</server>
+          </configuration>
+      </plugin>
+      </plugins>
   </build>
+
+
 </project>
