--- a/pom.xml
+++ b/pom.xml
@@ -11,7 +11,7 @@
 
       <dependency>
           <groupId>com.good.test</groupId>
-          <artifactId>io-yes-common</artifactId>
+          <artifactId>io-good-common</artifactId>
           <version>1.0-SNAPSHOT</version>
       </dependency>
 
@@ -88,7 +88,37 @@
           <artifactId>mysql-connector-java</artifactId>
           <version>5.1.38</version>
       </dependency>
+      <dependency>
+          <groupId>jstl</groupId>
+          <artifactId>jstl</artifactId>
+          <version>1.2</version>
+      </dependency>
+      <dependency>
+          <groupId>taglibs</groupId>
+          <artifactId>standard</artifactId>
+          <version>1.1.2</version>
+      </dependency>
 
+      <dependency>
+          <groupId>org.apache.shiro</groupId>
+          <artifactId>shiro-core</artifactId>
+          <version>1.2.4</version>
+      </dependency>
+      <dependency>
+          <groupId>org.apache.shiro</groupId>
+          <artifactId>shiro-web</artifactId>
+          <version>1.2.4</version>
+      </dependency>
+      <dependency>
+          <groupId>org.apache.shiro</groupId>
+          <artifactId>shiro-ehcache</artifactId>
+          <version>1.2.4</version>
+      </dependency>
+      <dependency>
+          <groupId>org.apache.shiro</groupId>
+          <artifactId>shiro-spring</artifactId>
+          <version>1.2.4</version>
+      </dependency>
 
 
   </dependencies>
