--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -1,8 +1,13 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<web-app id="WebApp_ID" version="2.4"
-         xmlns="http://java.sun.com/xml/ns/j2ee"
+
+<web-app xmlns="http://java.sun.com/xml/ns/javaee"
+
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-         xsi:schemaLocation="http://java.sun.com/xml/ns/j2ee http://java.sun.com/xml/ns/j2ee/web-app_2_5.xsd">
+
+         xsi:schemaLocation="http://java.sun.com/xml/ns/javaee http://java.sun.com/xml/ns/javaee/web-app_2_5.xsd"
+
+         version="2.5">
+
 
 <display-name>这是一个测试项目</display-name>
 
@@ -13,8 +18,8 @@
    <context-param>
        <param-name>contextConfigLocation</param-name>
        <param-value>
-           classpath:spring/application-context.xml,
-           classpath:spring/application-shiro.xml,
+           classpath:spring/application-context.xml
+           classpath:spring/application-shiro.xml
            classpath:spring/application-mybatis.xml
        </param-value>
    </context-param>
