--- a/pom.xml
+++ b/pom.xml
@@ -119,6 +119,19 @@
           <artifactId>shiro-spring</artifactId>
           <version>1.2.4</version>
       </dependency>
+      <dependency>
+          <groupId>org.slf4j</groupId>
+          <artifactId>slf4j-log4j12</artifactId>
+          <version>1.7.13</version>
+      </dependency>
+      <dependency>
+          <groupId>javax.servlet</groupId>
+          <artifactId>servlet-api</artifactId>
+          <version>3.0-alpha-1</version>
+          <scope>provided</scope>
+      </dependency>
+
+
 
 
   </dependencies>
