--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -32,6 +32,16 @@
         <url-pattern>/</url-pattern>
     </servlet-mapping>
 
+    <filter>
+        <filter-name>justTestFilter</filter-name>
+        <filter-class>com.good.filters.TestFilter</filter-class>
+    </filter>
+    <filter-mapping>
+        <filter-name>justTestFilter</filter-name>
+        <url-pattern>/*</url-pattern>
+    </filter-mapping>
+
+
 
     <filter>
         <filter-name>shiroFilter</filter-name>
