--- a/src/main/resources/jdbc.properties
+++ b/src/main/resources/jdbc.properties
@@ -1,5 +1,5 @@
 jdbc.driver = com.mysql.jdbc.Driver
-jdbc.url = jdbc:mysql://localhost:3306/mybatis-test
+jdbc.url = jdbc:mysql://localhost:3306/good_test
 jdbc.username = root
 jdbc.password = 123456a
 jdbc.initialSize = 1
