--- a/pom.xml
+++ b/pom.xml
@@ -139,6 +139,13 @@
           <version>3.4</version>
       </dependency>
 
+     <!-- <dependency>
+          <groupId>org.apache.maven.plugins</groupId>
+          <artifactId>maven-compiler-plugin</artifactId>
+          <version>3.3</version>
+      </dependency>-->
+
+
   </dependencies>
 
 
