--- a/pom.xml
+++ b/pom.xml
@@ -145,6 +145,19 @@
           <version>3.3</version>
       </dependency>-->
 
+      <dependency>
+          <groupId>org.mongodb</groupId>
+          <artifactId>mongo-java-driver</artifactId>
+          <version>3.2.1</version>
+      </dependency>
+
+      <dependency>
+          <groupId>org.springframework.data</groupId>
+          <artifactId>spring-data-mongodb</artifactId>
+          <version>1.8.2.RELEASE</version>
+      </dependency>
+
+
 
   </dependencies>
 
