--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -37,14 +37,7 @@
         <url-pattern>/</url-pattern>
     </servlet-mapping>
 
-    <filter>
-        <filter-name>justTestFilter</filter-name>
-        <filter-class>com.good.filters.TestFilter</filter-class>
-    </filter>
-    <filter-mapping>
-        <filter-name>justTestFilter</filter-name>
-        <url-pattern>/*</url-pattern>
-    </filter-mapping>
+
 
 
 
@@ -61,4 +54,20 @@
         <url-pattern>/*</url-pattern>
     </filter-mapping>
 
+    <filter>
+        <filter-name>justTestFilter</filter-name>
+        <filter-class>com.good.filters.TestFilter</filter-class>
+        <init-param>
+            <param-name>encoding</param-name>
+            <param-value>utf-8</param-value>
+        </init-param>
+    </filter>
+    <filter-mapping>
+        <filter-name>justTestFilter</filter-name>
+        <url-pattern>/*</url-pattern>
+    </filter-mapping>
+
+    <welcome-file-list>
+        <welcome-file>/index.jsp</welcome-file>
+    </welcome-file-list>
 </web-app>
