--- a/pom.xml
+++ b/pom.xml
@@ -145,11 +145,11 @@
           <version>3.3</version>
       </dependency>-->
 
-      <dependency>
+      <!--<dependency>
           <groupId>org.mongodb</groupId>
           <artifactId>mongo-java-driver</artifactId>
           <version>3.2.1</version>
-      </dependency>
+      </dependency>-->
 
       <dependency>
           <groupId>org.springframework.data</groupId>
