--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -54,7 +54,7 @@
         <url-pattern>/*</url-pattern>
     </filter-mapping>
 
-    <filter>
+    <!--<filter>
         <filter-name>justTestFilter</filter-name>
         <filter-class>com.good.filters.TestFilter</filter-class>
         <init-param>
@@ -65,7 +65,7 @@
     <filter-mapping>
         <filter-name>justTestFilter</filter-name>
         <url-pattern>/*</url-pattern>
-    </filter-mapping>
+    </filter-mapping>-->
 
     <welcome-file-list>
         <welcome-file>/index.jsp</welcome-file>
