--- a/pom.xml
+++ b/pom.xml
@@ -150,6 +150,21 @@
           <artifactId>mongo-java-driver</artifactId>
           <version>3.2.1</version>
       </dependency>-->
+      <dependency>
+          <groupId>com.fasterxml.jackson.core</groupId>
+          <artifactId>jackson-core</artifactId>
+          <version>2.1.5</version>
+      </dependency>
+      <dependency>
+          <groupId>com.fasterxml.jackson.core</groupId>
+          <artifactId>jackson-databind</artifactId>
+          <version>2.1.5</version>
+      </dependency>
+      <dependency>
+          <groupId>com.fasterxml.jackson.module</groupId>
+          <artifactId>jackson-module-jaxb-annotations</artifactId>
+          <version>2.1.5</version>
+      </dependency>
 
       <dependency>
           <groupId>org.springframework.data</groupId>
